--- a/.github/workflows/verified_commit.yml
+++ b/.github/workflows/verified_commit.yml
@@ -19,6 +19,6 @@ jobs:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         files: |
-          myfile
+          ./script.py
         commit-message: Committing ./script.py
         ref: refs/heads/main
