--- a/.github/workflows/assign_reviewer.yml
+++ b/.github/workflows/assign_reviewer.yml
@@ -15,7 +15,7 @@ jobs:
           echo "Assigning jge162 as reviewer"
       - name: Assign Reviewer
         if: "github.actor != 'jge162'"
-        uses: actions/checkout@v2
+        uses: madrapps/add-reviewers@v1
         with:
          # required
          # If you assign team for reviewer, you generate a personal access tokens with workflow scope. 
