--- a/.github/workflows/assign_reviewer.yml
+++ b/.github/workflows/assign_reviewer.yml
@@ -8,14 +8,14 @@ jobs:
   add-reviewer:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - name: Check user
-        if: "github.actor != 'jge162'"
-        run: |
-          echo "Assigning jge162 as reviewer"
+     #  - uses: actions/checkout@v1
+      # - name: Check user
+      #   if: "github.actor != 'jge162'"
+      #   run: |
+     #    echo "Assigning jge162 as reviewer"
       - name: Assign Reviewer
-        if: "github.actor != 'jge162'"
-        uses: madrapps/add-reviewers@v1
+        # if: "github.actor != 'jge162'"
+        uses: ohnogumi/assign-reviewers@v0.0.5
         with:
          # required
          # If you assign team for reviewer, you generate a personal access tokens with workflow scope. 
