--- a/.github/workflows/auto_assign.yml
+++ b/.github/workflows/auto_assign.yml
@@ -6,13 +6,11 @@ addAssignees: false
 
 # A list of reviewers to be added to pull requests (GitHub user name)
 reviewers:
-  - reviewerA
-  - reviewerB
-  - reviewerC
+  - geo4u
 
 # A number of reviewers added to the pull request
 # Set 0 to add all the reviewers (default: 0)
-numberOfReviewers: 0
+numberOfReviewers: 1
 
 # A list of assignees, overrides reviewers if set
 # assignees:
