--- a/.github/assign-by-files.yml
+++ b/.github/assign-by-files.yml
@@ -1,16 +1,7 @@
 ---
 # you can use glob pattern
-"**/*.js":
-  - geo4u
-
-".github/workflows/*.yml":
-  - geo4u
-
+'*.js':
+  - shufo
 # you can set multiple reviewers
-".github/**/*.yml":
-  - foo
-  - bar
-
-# you can set team reviewers (repo scope token required)
-".github/**/*.md":
-  - team: baz
+'.github/**/*.yml':
+  - geo4u
