--- a/.github/workflows/automerge_on_dependabot_pr.yml
+++ b/.github/workflows/automerge_on_dependabot_pr.yml
@@ -1,15 +1,13 @@
-name: Auto-Merge-Dependabot
+name: Auto Merge Dependency Updates
+
 on:
-  pull_request_target:
-    types: [labeled]
+  - pull_request_target
 
 jobs:
-  enable-auto-merge:
+  run:
     runs-on: ubuntu-latest
-
-    # Specifically check that dependabot (or another trusted party) created this pull-request, and that it has been labelled correctly.
-    if: github.event.pull_request.user.login == 'dependabot[bot]' && contains(github.event.pull_request.labels.*.name, 'dependencies')
     steps:
-    - uses: alexwilson/enable-github-automerge-action@main
-      with:
-        github-token: "${{ secrets.WORKFLOW_SECRET }}"
+      - name: Auto Merge Dependabot Updates
+        uses: buluma/gh-action-auto-merge-dependabot-updates@1.0.4
+        with:
+          allowed-actors: dependabot-preview[bot], dependabot[bot]
