--- a/.github/workflows/auto_assign_issue_pr.yml
+++ b/.github/workflows/auto_assign_issue_pr.yml
@@ -14,5 +14,7 @@ permissions:
 jobs:
   assign-author:
     runs-on: ubuntu-latest
+    if: ${{ !(github.actor == 'dependabot[bot]') }} 
+    # if user is dependabot skip this action
     steps:
       - uses: toshimaru/auto-author-assign@v1.6.2
