--- a/.github/workflows/label_on_pullrequest.yml
+++ b/.github/workflows/label_on_pullrequest.yml
@@ -7,7 +7,8 @@ jobs:
       contents: read
       pull-requests: write
     runs-on: ubuntu-latest
-    if: github.actor != 'jge162'
+    # if: github.actor != 'jge162'
+    if: ${{ (github.event.pull_request.user.login == 'jge162') && !(github.actor == 'dependabot[bot]') }}
     steps:
     - uses: actions/labeler@v4
       with:
