--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -5,10 +5,11 @@
 # and GitHub Enterprise Server.
 
 # Default reviewers/codeowners for all code changes
-* @jge162 @geo4u
+* @jge162 
+# @geo4u
 
 # Reviewer by email for html files
-*.html test@gmail.com
+# *.html test@gmail.com
 
 # Reviewer by organization
-*.txt @organizationName/
+# *.txt @organizationName/
