--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -17,6 +17,8 @@ updates:
       interval: 'weekly' 
       day: 'saturday'
   - package-ecosystem: "npm"
+    directory: '/'
     schedule:
-      interval: "daily"
+      interval: 'weekly' 
+      day: 'saturday'
  
