--- a/.github/workflows/auto_assign_issue_pr.yml
+++ b/.github/workflows/auto_assign_issue_pr.yml
@@ -1,5 +1,5 @@
 # .github/workflows/auto-author-assign.yml
-name: Auto Author Assign
+name: Auto on Pull request/issue
 
 on:
   pull_request_target:
