--- a/.github/workflows/welcome_to_repo.yml
+++ b/.github/workflows/welcome_to_repo.yml
@@ -6,7 +6,7 @@ jobs:
   greeting:
     runs-on: ubuntu-latest
     # if: github.actor != 'jge162'
-    if: ${{ (github.event.pull_request.user.login == 'jge162') && !(github.actor == 'dependabot[bot]') }}
+    if: ${{ (github.event.pull_request.user.login == 'jge162') && !(github.actor != 'dependabot[bot]') }}
     permissions:
       issues: write
       pull-requests: write
