--- a/.github/workflows/label_on_pullrequest.yml
+++ b/.github/workflows/label_on_pullrequest.yml
@@ -9,7 +9,7 @@ jobs:
       pull-requests: write
     runs-on: ubuntu-latest
     # if: github.actor != 'jge162'
-    if: ${{ (github.event.pull_request.user.login == 'jge162') && !(github.actor == 'dependabot[bot]') }}
+    if: ${{ (github.event.pull_request.user.login == 'jge162') && !(github.actor != 'dependabot[bot]') }}
     steps:
     - uses: actions/labeler@v4
       with:
