--- a/.github/workflows/comment_on_pullrequest.yml
+++ b/.github/workflows/comment_on_pullrequest.yml
@@ -12,7 +12,7 @@ jobs:
         uses: mshick/add-pr-comment@v2
         with:
           message: |
-            pull request review by @jge162
+            This pull request was completed by @jge162
           message-failure: |
             Uh oh!
           message-id: add-pr-comment
