--- a/.github/workflows/comment_on_pullrequest.yml
+++ b/.github/workflows/comment_on_pullrequest.yml
@@ -12,7 +12,7 @@ jobs:
         uses: mshick/add-pr-comment@v2
         with:
           message: |
-            Thank you for the Pull request, please leave notes. Thanks @{{ github.event.pull_request.user.login }}
+            Thank you for the Pull request. The team will review when time permits.
           message-failure: |
             Uh oh!
           message-id: add-pr-comment
