--- a/.github/workflows/welcome_to_repo.yml
+++ b/.github/workflows/welcome_to_repo.yml
@@ -1,12 +1,11 @@
-name: Greetings
+name: Greeting
 
 on: [pull_request_target, issues]
 
 jobs:
   greeting:
     runs-on: ubuntu-latest
-    # if: github.actor != 'jge162'
-    if: ${{ (github.event.pull_request.user.login != 'jge162') && !(github.actor != 'dependabot[bot]') }}
+    if: ${{ (github.event.pull_request.user.login != 'jge162') && (github.actor != 'dependabot[bot]') }}
     permissions:
       issues: write
       pull-requests: write
