--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -10,7 +10,8 @@ jobs:
     if: github.event.pull_request.merged == true && contains(github.event.pull_request.labels.*.name, 'create release') && github.event.pull_request.user.login == 'jge162'
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        # uses: actions/checkout@v2
+        uses: jge162/Action-workflows@v0.0.6
       - name: Build and test code
         run: |
           # Build and test code here
@@ -30,7 +31,8 @@ jobs:
           echo "::set-output name=new_tag::$new_tag"
         id: bump_version
       - name: Create release
-        uses: softprops/action-gh-release@v1
+        # uses: softprops/action-gh-release@v1
+        uses: jge162/Action-workflows@v0.0.6
         with:
           files: |
             build/*
