--- a/action.yaml
+++ b/action.yaml
@@ -16,10 +16,10 @@ runs:
   using: composite
   steps:
     - name: Python Action
-      runs-on: self-hosted
+      run: self-hosted
       uses: jge162/Action-workflows@v0.0.6
     - name: Run Action
-      runs-on: self-hosted
+      run: self-hosted
       shell: bash
       run: |
         echo "Hello, world!"
