--- a/action.yaml
+++ b/action.yaml
@@ -15,11 +15,11 @@ outputs:
 runs:
   using: composite
   steps:
+    - name: Checkout
+      uses: actions/checkout@v2
     - name: Python Action
-      run: self-hosted
       uses: jge162/Action-workflows@v0.0.6
     - name: Run Action
-      run: self-hosted
       shell: bash
       run: |
         echo "Hello, world!"
