--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -31,8 +31,8 @@ jobs:
           echo "::set-output name=new_tag::$new_tag"
         id: bump_version
       - name: Create release
-        uses: softprops/action-gh-release@v1
-        # uses: jge162/Action-workflows@v0.0.6
+        # uses: softprops/action-gh-release@v1
+        uses: jge162/create-release@main
         with:
           files: |
             build/*
