--- a/.github/workflows/python_check.yml
+++ b/.github/workflows/python_check.yml
@@ -14,7 +14,8 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
+      #uses: actions/checkout@v3
+      uses: jge162/Action-workflows@v0.0.8
 
     - run: |
         echo "Install required dependencies"
