--- a/.github/workflows/python_check.yml
+++ b/.github/workflows/python_check.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - name: Checkout repository
       #uses: actions/checkout@v3
-      uses: jge162/Action-workflows@v0.0.8
+      uses: jge162/Action-workflows@main
 
     - run: |
         echo "Install required dependencies"
